--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ a:hover {
 }
 
 body {
-    display: block;
+    display: flex;
+    flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     height: 100vh;
@@ -24,10 +25,7 @@ header {
     font-size: 13px;
     padding: 15px;
     margin-top: 10px;
-}
-
-.nav-bar {
-    flex: auto;
+    ma
 }
 
 .header-left {
@@ -68,11 +66,8 @@ header {
 
 main {
     display: block;
+    align-items: center;
     margin-top: 47px;
-}
-
-.main {
-
 }
 
 #logo {
@@ -87,7 +82,7 @@ main {
 
 .search {
     display: block;
-    margin: 0px auto;
+    margin: 0px auto 20px auto;
     padding: 0px 0px 0px 13px;
     width: 582px;
     height:44px;
@@ -97,61 +92,100 @@ main {
     border-color: rgb(223, 225, 229);
 }
 
+.search:hover {
+    box-shadow: 0px 1px 6px 0px rgb(209, 208, 208);
+}
+
 #mag-glass {
-    width: 16px;
+    display: inline-flex;
+    width: 28px;
     height: 16px;
-    margin: 12px 0 0 0;
+    margin: 12px 12px 0 0;
     padding: 0 13px 0 0;
 } 
 
 .search_bar {
-
+    display: inline-flex;
+    width: 490px;
+    height: 30px;
+    margin: 0 0 0 0;
+    border-style: none;
+    outline: none;
+    line-height: 30px;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgba(0, 0, 0, 0.87);
+    background-color: transparent;
+    padding: 0px;
+    vertical-align: 0.2em;
 }
 
 #speech-icon {
-
+    display: inline-flex;
+    height: 17px;
+    width: 12px;
+    margin: 8px 0 0 0;
 }
 
-.buttons {
-
+center {
+    display: block;
 }
 
-#search_button {
-
+#searchbutton {
+    background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
+    background-color: #f2f2f2;
+    border: none;
+    color: #5f6368;
+    padding: 0 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    border-radius: 4px;
+    margin: 11px 4px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    cursor: pointer;
 }
 
-#lucky {
-
+#searchbutton:hover {
+    color: #1e1e1e;
+    border: 1px solid #cecece;
 }
-
-.footer {
-
-}
-
-.footer_border {
-
-}
-
-.foot {
-
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    max-width: 100%;
+    min-width: 980px;
+    height: 52px;
+    line-height: 52px;
+    background-color: rgb(242, 242, 242);
+    font-size: 14px;
+    border-top: 1px solid #e4e4e4;
 }
 
 .left_foot {
-
+    float: left;
+    padding: 0 0 0 27px;
 }
 
 .glinks_left {
-
+    padding: 0 0 0 27px;
+    color: rgba(0, 0, 0, 0.87);
 }
 
 .right_foot {
-
+    float: right;
+    padding: 0 0 0 27px;
 }
 
 .advert_link {
-
+    color: rgba(0, 0, 0, 0.87);
 }
 
 .glinks_right {
-
+    padding: 0 27px 0 0 ;
+    color: rgba(0, 0, 0, 0.87);
 }
